src/style.css
@media (max-width: 1024px) {
  html {
    width: 100vw;
    font-size: 100%;
  }

  .main-theme,
  .front-layer,
  #loader-fetching,
  #loader-nothing-to-search,
  #preloader {
    width: 100vw;
    height: 100vh;
  }
  .container {
    width: 90vw;
    max-width: none;
    margin: 5vw auto;
    padding: 0;
  }

  h1 {
    font-size: 28vw;
  }
  h2 {
    font-size: 10vw;
    line-height: 11vw;
  }
  h3 {
    font-size: 6.5vw;
  }
  h4 {
    font-size: 6vw;
  }
  #temp-main small {
    font-size: 9.5vw;
    top: -13vw;
  }

  #current-weather-indices {
    font-size: 5vw;
  }

  .hourly,
  .weekly,
  .search #button-settings,
  .search #button-location-gps,
  .search #submit {
    font-size: 5vw;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
  }
  .search #city-input {
    font-size: 5vw;
  }
  .hourly,
  .weekly,
  .search #button-settings {
    margin-right: 1vw;
  }
  .search #button-settings,
  .search #button-location-gps {
    width: 11vw;
  }
  .search #submit {
    width: 20vw;
  }
  .offcanvas-body footer {
    font-size: 4vw;
  }
  .image-six-chibi {
    margin: -10vw 0 -14vw -3vw;
  }
  #loader-fetching .loader-text,
  #loader-nothing-to-search .loader-text {
    left: 35vw;
  }
  #preloader .preloader-text {
    left: 40vw;
  }
}
@media (min-width: 1025px) {
  body,
  #loader-fetching,
  #preloader,
  .main-theme,
  .front-layer {
    width: 500px;
    margin: 0 auto;
    height: 100vh;
  }
  .container {
    max-width: 90%;
    margin: 10px auto;
    padding: 0;
  }

  h1 {
    font-size: 100px;
  }
  h2 {
    font-size: 40px;
    line-height: 44px;
  }
  h3 {
    font-size: 30px;
  }
  h4 {
    font-size: 25px;
  }
  #temp-main small {
    font-size: 30px;
    top: -45px;
  }

  #current-weather-indices,
  .hourly,
  .weekly,
  .search #button-settings,
  .search #button-location-gps,
  .search #city-input,
  .search #submit {
    font-size: 20px;
  }
  .hourly,
  .weekly,
  .search #button-settings {
    margin-right: 5px;
  }
  .search #button-settings,
  .search #button-location-gps {
    width: 40px;
  }
  .search #submit {
    width: 80px;
  }
  .offcanvas-body footer {
    font-size: 15px;
  }
  .image-six-chibi {
    margin: -40px 0 -60px -10px;
  }
  #preloader .preloader-text {
    left: 45%;
  }

  .accordion button img {
    width: 70px;
  }

  .accordion-body .text {
    font-size: 15px;
  }
  .accordion-body .iconify {
    font-size: 35px;
  }
  .accordion-body .index {
    font-size: 17px;
  }

  .accordion-body .row > * {
    padding: 0 0 0 10px;
  }

  .accordion-body {
    width: 100%;
    margin: 0;
    line-height: 40px;
  }
}

body {
  font-family: "Oswald", sans-serif;
}
h1 {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
a {
  text-decoration: none;
  color: unset;
  cursor: pointer;
}

h1,
h2,
h3,
h4 {
  opacity: 80%;
}

h3:first-letter {
  text-transform: capitalize;
}

h4,
p {
  margin: 0;
  padding: 0;
  text-align: center;
}

.main-theme,
.front-layer {
  position: fixed;
  top: 0;
  z-index: -1;
  opacity: 80%;
  border: 1px solid lightgray;
}

.scrolling-wrapper {
  overflow: auto;
  white-space: nowrap;
}

.image-six-chibi {
  display: block;
  width: 100%;
  opacity: 90%;
}

.search #button-settings {
  border-radius: 4px;
}
.search #button-location-gps {
  border-radius: 4px 0px 0px 4px;
}
.search #city-input {
  z-index: 1;
}
#temp-main small {
  position: relative;
}

.hourly,
.weekly {
  display: inline-block;
  text-align: center;
  padding: 0;
  width: 16%;
}

.image-weather-small {
  display: inline-block;
  max-width: 80%;
}

.clickables:hover {
  cursor: pointer;
  font-size: larger;
  opacity: 80%;
}

#current-weather-indices,
.card,
.accordion-button,
.accordion-item {
  background-color: rgba(203, 207, 207, 0.6);
  /* background-color: rgba(255, 255, 255, 0.6); */
}
#current-weather-indices {
  border-radius: 4px;
  padding: 12px;
}
.offcanvas-body .api-icons-explanation img {
  width: 3em;
  margin: -0.8em;
}
.offcanvas-body footer {
  text-align: center;
  margin-top: 20px;
}
.offcanvas-body footer .image-footer {
  width: 15%;
}
.offcanvas-body select {
  margin-bottom: 10px;
  margin-right: 15px;
  width: 30%;
}

.carousel-inner {
  position: absolute;
  width: 100%;
  z-index: -1;
}
.carousel-item img {
  height: 40vh;
}

.front-layer {
  z-index: -1;
}

#loader-fetching,
#loader-nothing-to-search,
#preloader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(
    117.9deg,
    rgb(183, 248, 193) -3.5%,
    rgb(169, 212, 250) 53.8%,
    rgb(148, 231, 255) 100.4%
  );
  z-index: 1;
}

#preloader {
  display: none;
  display: block;
}
#loader-fetching,
#loader-nothing-to-search {
  display: none;
}
#loader-fetching img,
#preloader img,
#loader-nothing-to-search img {
  height: 25vh;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.loader-text,
.preloader-text {
  font-family: "Press Start 2P", cursive;
  font-size: 2vh;
  font-weight: 700;
  color: rgba(0, 0, 0, 0.7);
  text-shadow: 2px 2px 2px whitesmoke;
  position: fixed;
  top: 65%;
}

.visible {
  visibility: visible;
}
.hidden {
  visibility: hidden;
}

.accordion {
  z-index: 1;
  opacity: 80%;
}

/*
button .weekday-details .image,
.accordion-body {
  padding: 0;
}

button .weekday-details .weekday,
button .weekday-details .index button .weekday-details img {
  padding-right: 0;
}

.accordion-button {
  padding: 5vw;
}
.weekday-detailed .weekday {
  padding-left: 10px;
}

button .weekday-details .image {
  padding-left: 0;
}
button .weekday-details .index {
  padding-right: 0;
}
button .weekday-details .weekday,
button .weekday-details .index {
  font-size: 5vw;
  vertical-align: middle;
}
*/

.accordion button img {
  width: 15vw;
}

.accordion-body .text {
  font-size: 3.5vw;
}
.accordion-body .iconify {
  font-size: 7.5vw;
}
.accordion-body .index {
  font-size: 4vw;
}

.accordion-body .row > * {
  padding: 0 0 0 1.1vw;
}

.accordion-body {
  width: 95vw;
  margin: 0;
  line-height: 8.5vw;
  padding: 1rem 0.5rem 1rem 1.25rem;
}

#weekday-detailed button {
  padding-top: 0;
  padding-bottom: 0;
}

